@@ -4,6 +4,9 @@
 - Add ``editable`` parameter to :meth:`atomx.Atomx.report`.
 - Add ``dsp`` reporting scope.
 - Add ``daterange`` parameter to :meth:`atomx.Atomx.report`.
+- When accessing a model attribute, attributes that are atomx models will now
+  automatically returned as :class:`atomx.models.AtomxModel` instead of
+  leaving them as `dict`.
 - :meth:`atomx.models.AtomxModel.reload` takes kwargs parameter
 - :meth:`atomx.Atomx.delete` can take a `atomx.models` instance as argument
 - Add new models:
